# blocklace-a2a

./: .gitignore  LICENSE.txt  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPARISON.md  INTEGRATION.md  PROBLEM.md
examples/: a2a_integration.py
src/blocklace_a2a/: __init__.py  blocklace.py  exceptions.py  middleware.py  types.py  verify.py
tests/: conftest.py  test_blocklace.py  test_equivocation.py  test_middleware.py
