[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blocklace-a2a"
version = "0.1.0"
description = "Cryptographic audit layer for A2A agent communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "en-yao" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/en-yao/blocklace-a2a"
Repository = "https://github.com/en-yao/blocklace-a2a"

[tool.hatch.build.targets.wheel]
packages = ["src/blocklace_a2a"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
